feat: 提供推理NDJSON内部接口